# codecov-validator

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements-twine.txt  requirements.txt  setup.cfg
.circleci/: config.yml
.github/: renovate.json
.github/workflows/: ci.yml  python.yml
codecov_validator/: __main__.py  ccv.py  codecov_validator.py
docs/: requirements-doc.txt
docs/source/: autodoc_ccv.rst  conf.py  index.rst
tests/: test_ccv.py
