[metadata]
name = codecov_validator
author = mashi
author_email = 59000162+mashi@users.noreply.github.com
description = Validates the codecov.yml configuration file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mashi/codecov-validator
project_urls =
    Bug Tracker = https://github.com/mashi/codecov-validator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8

[console_scripts]
ccv=codecov_validator.ccv:run_request
