[metadata]
name = codecov_validator
author = mashi
author_email = 59000162+mashi@users.noreply.github.com
description = Validates the codecov.yml configuration file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mashi/codecov-validator
project_urls =
    Bug Tracker = https://github.com/mashi/codecov-validator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests~=2.32.3
    click~=8.3.0

[options.entry_points]
console_scripts =
    ccv=codecov_validator.ccv:ccv
